# owncast_plugin_sdk_rust

./: Cargo.toml  README.md  plugin.manifest.json
src/: define_plugin.rs  errors.rs  imports.rs  input_json.rs  json.rs  lib.rs  method.rs  output_json.rs  owncast_plugin.rs  partial_manifest.rs  permission.rs  permissions.rs  plugin.rs  plugin_builder.rs
src/command/: command_builder.rs  command_context.rs  command_data.rs  command_definition.rs  ctx.rs  mod.rs
src/json_objects/: action_button.rs  admin.rs  admin_page.rs  attachment.rs  auth_check_request.rs  auth_check_result.rs  bot.rs  category.rs  chat_client.rs  chat_message.rs  chat_message_moderation.rs  chat_user_rename.rs  command.rs  command_event.rs  config.rs  config_type.rs  content_request.rs  envelope.rs  event.rs  event_type.rs  extra_page_content.rs  fediverse_actor.rs  fediverse_engagement.rs  fediverse_inbound_post.rs  fediverse_targeted_engagement.rs  filter.rs  filter_result.rs  incoming_http_request.rs  manifest.rs  mod.rs  network.rs  notify.rs  outgoing_http_response.rs  permission.rs  sse_connection_event.rs  stream_started.rs  stream_stopped.rs  stream_title_change.rs  subscriptions.rs  tab.rs  (+4 more)
src/objects/: chat_message.rs  content_request.rs  filter_results.rs  incoming_http_request.rs  manifest.rs  mod.rs  user.rs
