[package]
name = "owncast_plugin_sdk_rust"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/allykotetsu/owncast_plugin_sdk_rust"
description = " A Rust crate for the Owncast Plugin SDK."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2.126"
